# research

./: .bazelrc  .env  .gitignore  MODULE.bazel  README.md  WORKSPACE  go.mod  go.mod.old  go.sum  go.sum.old
.github/workflows/: daily-summary.yml  gh-pages.yml  todofy-build.yml
doc/research/eara2024/iris_emc/: model_information.md
doc/website/: BUILD
scripts/: build_docker_image.sh  gotidy.sh
self_host/host/: BUILD  docker_compose.yml  update.sh
self_host/host/env/: cloudmailin.env
tools/: make_executable.bzl
website/homepage/: BUILD  config.toml
