"""This is the module docstring."""

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_go", version = "0.50.0")
bazel_dep(name = "gazelle", version = "0.38.0")

# golang
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_emersion_go_sasl", "com_github_emersion_go_smtp", "com_github_gin_gonic_gin", "com_github_go_resty_resty_v2", "com_github_google_generative_ai_go", "com_github_google_uuid", "com_github_johanneskaufmann_html_to_markdown", "com_github_joho_godotenv", "com_github_pkoukk_tiktoken_go", "com_github_sashabaranov_go_openai", "com_github_tidwall_gjson", "com_github_ziyixi_go_ticktick", "org_golang_google_api")
