"""This is the module docstring."""

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.1")
bazel_dep(name = "protobuf", version = "30.0-rc1")

# golang
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_badoux_checkmail", "com_github_gin_gonic_gin", "com_github_go_resty_resty_v2", "com_github_google_generative_ai_go", "com_github_johanneskaufmann_html_to_markdown", "com_github_mailjet_mailjet_apiv3_go_v4", "com_github_sirupsen_logrus", "com_github_tidwall_gjson", "io_gorm_driver_sqlite", "io_gorm_gorm", "org_golang_google_api", "org_golang_google_grpc", "org_golang_google_protobuf")
